Refactor continues.